assignments/pa3/testsuite/cgen/out/many_objects_on_heap.cl.spim.err
spim: (parser) syntax error on line 193 of file /home/raj/cool/distro/assignments/pa3/testsuite/cgen/out/many_objects_on_heap.cl.out
	  .word	-1
	  ^
Instruction references undefined symbol at 0x0040129c
